Small text change

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <div class="row meee">
       <div class="col-md-12"><p class="centerer">Powered by Bootstrap.<br />
         This work is licensed under a Creative Commons Attribution 4.0 International License.<br />
-        Site design and development by <a href="http://joewoodsworks.com">Joe Woods</a>.</p></div>
+        Site design by <a href="http://joewoodsworks.com">Joe Woods</a>.</p></div>
     </div>
   </div>
 </div>
