Next event coming soon

--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
       <p>Follow us on <a href="https://twitter.com/pyrva">Twitter</a>, <a href="https://github.com/PyRVA">GitHub</a>, and <a href="http://www.meetup.com/PyRVAUserGroup/">Meetup</a>.</p>
     </div>
     </div>
+    <div class="second row">
+      <div class="col-sm-12">
+        <h3>Thanks for coming out!</h3><br />
+        <p>We'll have more details about the next meetup soon.  In the meantime, check out our <a href="http://www.meetup.com/PyRVAUserGroup/">Meetup</a> page, where you can be automatically alerted to the events coming up!</p>
+        <p>If you have an idea for the next meetup or would like to present a 5–15 minute Lightning Talk, feel free to contact <a href="http://www.meetup.com/PyRVAUserGroup/members/126298962/">Andrew</a> or <a href="http://www.meetup.com/PyRVAUserGroup/members/71861332/">Chris</a>.</p>
+      </div>
+    </div>
+  <!--
   <div class="second row">
     <div class="col-sm-12">
       <h3>Next meeting: the Depot</h3>
@@ -151,6 +159,7 @@
 
     </div>
   </div>
+-->
   <div class="row meee">
       <div class="col-md-12"><p class="centerer">Powered by Bootstrap.<br />
         This work is licensed under a Creative Commons Attribution 4.0 International License.<br />
