Updating with info for the meeting for December 9, 2015

--- a/index.html
+++ b/index.html
@@ -129,21 +129,25 @@
       <p>Follow us on <a href="https://twitter.com/pyrva">Twitter</a>, <a href="https://github.com/PyRVA">GitHub</a>, and <a href="http://www.meetup.com/PyRVAUserGroup/">Meetup</a>.</p>
     </div>
     </div>
-    <div class="second row">
+    <!-- <div class="second row">
       <div class="col-sm-12">
         <h3>Thanks for coming out!</h3><br />
         <p>We'll have more details about the next meetup soon.  In the meantime, check out our <a href="http://www.meetup.com/PyRVAUserGroup/">Meetup</a> page, where you can be automatically alerted to the events coming up!</p>
         <p>If you have an idea for the next meetup or would like to present a 5–15 minute Lightning Talk, feel free to contact <a href="http://www.meetup.com/PyRVAUserGroup/members/126298962/">Andrew</a> or <a href="http://www.meetup.com/PyRVAUserGroup/members/71861332/">Chris</a>.</p>
       </div>
-    </div>
-  <!--
+    </div> -->
+  
   <div class="second row">
     <div class="col-sm-12">
-      <h3>Next meeting: the Depot</h3>
-      <h4>Wednesday, November 11, 2015; 6:30–9:30</h4>
-      <p>For our second meetup, we are going to experiment a bit. For the first part of the meetup (~45 mins), we are going to host two workshops: For those of us new to Python, we're running a Python Bootcamp to install Python & Python tools on their machines, including tools like virtualenv and pip. If we have time, we may run through a quick web app demo for fun. For those who have a more extensive Python background, during this time we're going to try "Project Time" that we're borrowing from other Python User Groups like Boston Python and DC Python. Project Time is unstructured time for anyone to work on any projects they'd like, potentially with other PyRVA members.</p>
+      <h3>Next meeting: <br> Python for Jedi</h3>
+      <h4>Wednesday, December 9, 2015; 6:30–9:30</h4>
+      <p>Python is an elegant instrument for a more civilized age, and certainly not as random or clumsy as...some other languages. But don't take our word for it; experience the Force for yourself on 9 December.</p>
 
-      <p>Following the Python Bootcamp/Project Time, we're going to have a few Lightning Talks. Topics (that we know of!) include Continuous Integration & Python Application Deployment w/ Jenkins; and Metadata Preprocessing in Python and Document Tree Structure. If you have an idea you'd like to present for a 5-15 minute Lightning Talk, you can let <a href="http://www.meetup.com/PyRVAUserGroup/members/126298962/">Andrew</a> or <a href="http://www.meetup.com/PyRVAUserGroup/members/71861332/">Chris</a> know, or just show up prepared and we'll schedule you toward the end. </p>
+      <p>In our first workshop on 11 November, we covered the installation of Python, pip and virtualenv as well as a few lightning talks. (Instructions are at <a href="http://www.pyrva.org/pybootcamp.html">http://www.pyrva.org/pybootcamp.html</a> if you missed it.) At this meeting, we will have a talk about working with Python in Sublime Text, a talk about how to organize a Python project, and then a special talk about automating some of life's tedium with Python.</p>
+
+      <p>Following these talks, we will jump into project night. The organizers have decided to have a theme of "serving the community with Python" for this project night. If you have any ideas about how to benefit any community you're a part of, feel free to bring them to PyRVA and recruit other Pythonistas to help out. The goal is simply to learn, have fun and build something useful.</p>
+
+      <p>We hope to see you on 9 December, and until then, May the Force Be with You.</p>
     </div>
   </div>
   <div class="third row">
@@ -159,7 +163,7 @@
 
     </div>
   </div>
--->
+
   <div class="row meee">
       <div class="col-md-12"><p class="centerer">Powered by Bootstrap.<br />
         This work is licensed under a Creative Commons Attribution 4.0 International License.<br />
