--- a/index.html
+++ b/index.html
@@ -139,15 +139,9 @@
   
   <div class="second row">
     <div class="col-sm-12">
-      <h3>Next meeting: <br> Python for Jedi</h3>
-      <h4>Wednesday, December 9, 2015; 6:30–9:30</h4>
-      <p>Python is an elegant instrument for a more civilized age, and certainly not as random or clumsy as...some other languages. But don't take our word for it; experience the Force for yourself on 9 December.</p>
+      <h3>Next meeting: <br>Async Python and JavaScript (ES6)</h3>
+      <h4>Wednesday, January 13, 2015; 6:30–9:30</h4>
 
-      <p>In our first workshop on 11 November, we covered the installation of Python, pip and virtualenv as well as a few lightning talks. (Instructions are at <a href="http://www.pyrva.org/pybootcamp.html">http://www.pyrva.org/pybootcamp.html</a> if you missed it.) At this meeting, we will have a talk about working with Python in Sublime Text, a talk about how to organize a Python project, and then a special talk about automating some of life's tedium with Python.</p>
-
-      <p>Following these talks, we will jump into project night. The organizers have decided to have a theme of "serving the community with Python" for this project night. If you have any ideas about how to benefit any community you're a part of, feel free to bring them to PyRVA and recruit other Pythonistas to help out. The goal is simply to learn, have fun and build something useful.</p>
-
-      <p>We hope to see you on 9 December, and until then, May the Force Be with You.</p>
     </div>
   </div>
   <div class="third row">
