Adding other contributors

--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
   
   <div class="second row">
     <div class="col-sm-12">
-      <h3>Next meeting: <br>Async Python and JavaScript (ES6)</h3>
-      <h4>Wednesday, January 13, 2015; 6:30–9:30</h4>
+      <p>Next meeting:</p>
+      <h3>Async Python and JavaScript (ES6)</h3>
+      <h4>Wednesday, January 13, 2015, 6:30pm&ndash;9ish</h4>
 
     </div>
   </div>
@@ -161,7 +162,7 @@
   <div class="row meee">
       <div class="col-md-12"><p class="centerer">Powered by Bootstrap.<br />
         This work is licensed under a Creative Commons Attribution 4.0 International License.<br />
-        Site design by <a href="http://joewoodsworks.com">Joe Woods</a>.</p></div>
+        Site design by <a href="http://joewoodsworks.com">Joe Woods</a> and other PyRVA contributors.</p></div>
     </div>
   </div>
 </div>
