Updatinging tonight's meeting's topic.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
   <div class="second row">
     <div class="col-sm-12">
       <p>Next meeting:</p>
-      <h3>Async Python and JavaScript (ES6)</h3>
+      <h3>Flask!</h3>
+      <!-- <h3>Async Python and JavaScript (ES6)</h3> -->
       <h4>Wednesday, January 13, 2015, 6:30pm&ndash;9ish</h4>
 
     </div>
