--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
   <div class="second row">
     <div class="col-sm-12">
       <p>Next meeting:</p>
-      <h3>Flask!</h3>
+      <h3>Our April Meetup - PyRVA Website Workshop/Hackathon</h3>
       <!-- <h3>Async Python and JavaScript (ES6)</h3> -->
-      <h4>Wednesday, January 13, 2015, 6:30pm&ndash;9ish</h4>
-
+      <h4>Wednesday, April 13, 2015, 7:00pm&ndash;9ish</h4>
+      <p>This week, we're taking PyRVA.org to the next level by hosting a workshop/hackathon focused on improving our website! The goal is to learn more about Python through development and collaboration. RSVP on our <a href="http://www.meetup.com/PyRVAUserGroup/events/228599116/">Meetup.com page</a>.</p>
     </div>
   </div>
   <div class="third row">
@@ -152,7 +152,7 @@
     </div>
     <div class="col-sm-6">
       <h3>The Depot @ VCU</h3>
-      <p style="font-size: 1.5em;">6:30–9:30<br />
+      <p style="font-size: 1.5em;">7:00–9:30<br />
         814 W. Broad St.<br />
         Second Floor<br />
         Plenty of street parking!</p>
