--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
-    <link href="bootstrap/bootstrap.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
+  <link href="bootstrap/bootstrap.css" rel="stylesheet">
 
-    <style type="text/css">
+  <style type="text/css">
     body {
       background: #fff;
       margin: 0;
@@ -121,71 +121,113 @@
         width: 100%;
       }
     }
-    </style>
-    <title>PyRVA — A Python Usergroup for Richmond, Virginia</title>
-    <meta property="og:title" content="PyRVA User Group" />
-    <meta property="og:url" content="http://pyrva.github.io/" />
-    <meta property="og:description" content='Python User Group for Richmond, Virginia' />
-    <link rel="#" rel="image_src" title="PyRVA" id="PyRVA" />
-    <meta property="og:site_name" content="PyRVA" />
+  </style>
+  <title>PyRVA — A Python Usergroup for Richmond, Virginia</title>
+  <meta property="og:title" content="PyRVA User Group" />
+  <meta property="og:url" content="http://pyrva.github.io/" />
+  <meta property="og:description" content='Python User Group for Richmond, Virginia' />
+  <link rel="#" rel="image_src" title="PyRVA" id="PyRVA" />
+  <meta property="og:site_name" content="PyRVA" />
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <link rel="stylesheet" type="text/css" href="assets/css/website.css">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="container">
-  <div class="first row">
-    <div class="col-sm-6">
+      <![endif]-->
+</head>
+<body>
+  <div class="container">
+    <div class="first row">
+      <div class="col-sm-6">
         <img class="face" src="logo.png">
-    </div>
-    <div class="col-sm-6 toptext">
-      <h3>PyRVA: a Python Usergroup</h3>
-      <p class="meetup_pull_api"><b>Please check our <a href="http://www.meetup.com/PyRVAUserGroup">Meetup page</a> for the location, time, and topic of our next meeting!</b></p><br />
+      </div>
+      <div class="col-sm-6 toptext">
+        <h3>PyRVA: a Python Usergroup</h3>
+        <p class="meetup_pull_api"><b>Please check our <a href="http://www.meetup.com/PyRVAUserGroup">Meetup page</a> for the location, time, and topic of our next meeting!</b></p><br />
 
-      <p>The Python language is a rarity in the software industry: accessible to almost everyone, versatile across application domains and generally a joy to work with. While enjoying Python alone is beneficial, PyRVA believes that Python is best enjoyed in the company of others. We are busy organizing talks, hackathons, workshops and more to help build up the Python community here in Richmond. Ideas are welcome.</p><br />
+        <p>The Python language is a rarity in the software industry: accessible to almost everyone, versatile across application domains and generally a joy to work with. While enjoying Python alone is beneficial, PyRVA believes that Python is best enjoyed in the company of others. We are busy organizing talks, hackathons, workshops and more to help build up the Python community here in Richmond. Ideas are welcome.</p><br />
 
-      <p>Follow us on <a href="https://twitter.com/pyrva">Twitter</a>, <a href="https://github.com/PyRVA">GitHub</a>, and <a href="http://www.meetup.com/PyRVAUserGroup/">Meetup</a>.</p>
+        <p>Follow us on <a href="https://twitter.com/pyrva">Twitter</a>, <a href="https://github.com/PyRVA">GitHub</a>, and <a href="http://www.meetup.com/PyRVAUserGroup/">Meetup</a>.</p>
+      </div>
     </div>
+
+
+    <div class="row upcoming-event__wrapper" id="upcoming">
+      <h2>Upcoming Events:</h2>
+      <ul class="upcoming-event__list">
+        <li is="upcoming-event" v-for="event in upcomingEvents" :event="event" v-if="event.name !== 'Our Monthly meeting'"></li>
+      </ul>
     </div>
-  <div class="row meee">
+
+
+    <div class="row meee">
       <div class="col-md-12"><p class="centerer">Powered by Bootstrap.<br />
         This work is licensed under a Creative Commons Attribution 4.0 International License.<br />
         Site design by <a href="http://joewoodsworks.com">Joe Woods</a>.</p></div>
+      </div>
     </div>
   </div>
-</div>
+  <template id="upcoming-template">
+    <div class="upcoming-event">
+      <div class="upcoming-event__header">
+        <div class="upcoming-event__date">{{startTime}}</div>
+        <div class="upcoming-event__name"><a href="{{event.event_url}}">{{event.name}}</a></div>
+      </div>
+      <div class="upcoming-event__info">
+        <div v-html="event.description"></div>
+        <span class="upcoming-event__more-info">{{rsvpText}} reserved their spot. <a href="{{event.event_url}}">Join them!</a></span>
+      </div>
+    </div>
+  </template>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript">
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="bootstrap/bootstrap.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.2.6/vue.js"></script>
+  <script src="js/upcoming-months.js"></script>
+  <script type="text/javascript">
     $.ajax({
-        url: "https://api.meetup.com/2/events?group_urlname=PyRVAUserGroup",
+      url: "https://api.meetup.com/2/events?group_urlname=PyRVAUserGroup",
 
-        // The name of the callback parameter, as specified by the YQL service
-        jsonp: "callback",
+    // The name of the callback parameter, as specified by the YQL service
+    jsonp: "callback",
 
-        // Tell jQuery we're expecting JSONP
-        dataType: "jsonp",
+    // Tell jQuery we're expecting JSONP
+    dataType: "jsonp",
 
-        // Tell YQL what we want and that we want JSON
-        data: {
-            format: "json"
-        },
+    // Tell YQL what we want and that we want JSON
+    data: {
+      format: "json"
+    },
 
-        // Work with the response
-        success: function( response ) {
-          $('.meetup_pull_api').html('<b>Our next meeting: <br /><a href="' + response.results[0].event_url + '">' + response.results[0].name + "</a></b>")
-          console.log(response.results[0].name)
-          console.log('Number of people coming so far: ' + response.results[0].yes_rsvp_count)
-          console.log(response.results[0].event_url)
+    // Work with the response
+    success: function( response ) {
+      window.meetupData = response.results;
+      upcomingApp.upcomingEvents = response.results;
+      $('.meetup_pull_api').html('<b>Our next meeting: <br /><a href="' + response.results[0].event_url + '">' + response.results[0].name + "</a></b>")
+      console.log(response.results[0].name)
+      console.log('Number of people coming so far: ' + response.results[0].yes_rsvp_count)
+      console.log(response.results[0].event_url)
+    }
+  });
+  </script>
+  <script>
+    var loc = document.location.host
+    if ( 
+        loc.slice(0,2) == "d." || 
+        loc.slice(0,3) == "10." || 
+        loc.slice(-6) == ".local" ||
+        document.location.host.slice(0,9) == "localhost"
+        ) {
+          var s = document.createElement('script');
+          loc = loc.search(':') > 0 ? loc.split(':')[0] : loc
+          s.src = "//"+loc+":35729/livereload.js";
+          document.body.appendChild(s);
         }
-    });
-    </script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap/bootstrap.js"></script>
-  </body>
+  </script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+</body>
 </html>
