Add link to PyRVA Discord Server
Updated link to point directly to PyRVA Discord Server

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         <p class="text-center">Follow us on <a href="https://twitter.com/pyrva"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>, <a href="https://github.com/PyRVA"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a>, and <a href="http://www.meetup.com/PyRVAUserGroup/"><i class="fa fa-meetup" aria-hidden="true"></i> Meetup</a>.</p>
 
-        <p class="text-center">Join our comunity chat on <a href="https://discord.com/">Discord</a>! </p>
+        <p class="text-center">Join our comunity chat on <a href="https://discord.gg/d675KZxu">Discord</a>! </p>
 
       </div>
 
