remove "upcoming events" header

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
     <div class="row upcoming-event__wrapper" id="upcoming">
-      <h2>Upcoming Events:</h2>
+      <!-- <h2>Upcoming Events:</h2> -->
       <ul class="upcoming-event__list">
         <li is="upcoming-event" v-for="event in upcomingEvents" :event="event" v-if="event.name !== 'Our Monthly meeting'"></li>
       </ul>
